--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,27 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+/* Push main content; footer stays bottom */
+.main-content {
+  flex: 1;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+/* Footer */
+.app-footer {
+  text-align: center;
+  padding: 10px 0;
+  background: linear-gradient(
+    272deg,
+    rgba(254, 51, 0, 1) 10%,
+    rgba(255, 84, 0, 1) 100%
+  );
+  color: #fff;
+  font-size: 16px;
+  font-family: "Playpen Sans", cursive;
+  border-top: 1px solid #ddd;
+  width: 100%;
+  margin-top: auto;
 }
